<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jeric.bitteldigitalsignage.ui.signup.SignupViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C4000000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".50" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/fragment_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/g1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                android:src="@drawable/meshtv_logo_01"
                app:layout_constraintBottom_toTopOf="@id/tv_introduction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_introduction"
                style="@style/DefaultTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/introduction"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/logo"
                app:layout_constraintStart_toStartOf="@id/logo"
                app:layout_constraintTop_toBottomOf="@id/logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/g1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:padding="@dimen/fragment_horizontal_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/g2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".5" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/DefaultTextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/ipHost"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/viewLine"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:background="@drawable/gradient_color"
                    app:layout_constraintEnd_toEndOf="@id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ipHost"
                    style="@style/tiEitText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewLine"
                    app:startIconDrawable="@drawable/baseline_location_pin_24"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_host"
                        style="@style/tiEitTextTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:hint="@string/ip_address"
                        android:nextFocusDown="@id/et_port"
                        android:nextFocusRight="@id/et_port"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp"
                        android:text="@={viewModel.uiState.etHost}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/isPort"
                    style="@style/tiEitText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/ipHost"
                    app:layout_constraintStart_toStartOf="@id/ipHost"
                    app:layout_constraintTop_toBottomOf="@id/ipHost"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_port"
                        style="@style/tiEitTextTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:hint="@string/port"
                        android:nextFocusLeft="@id/et_host"
                        android:nextFocusUp="@id/et_host"
                        android:nextFocusDown="@id/et_room"
                        android:nextFocusRight="@id/et_room"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp"
                        android:text="@={viewModel.uiState.etPort}" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/isRoom"
                    style="@style/tiEitText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/isPort"
                    app:layout_constraintStart_toStartOf="@id/isPort"
                    app:layout_constraintTop_toBottomOf="@id/isPort"
                    app:startIconDrawable="@drawable/baseline_bedroom_child_24"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_room"
                        style="@style/tiEitTextTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/room"
                        android:nextFocusDown="@id/et_mac"
                        android:nextFocusRight="@id/et_mac"
                        android:nextFocusLeft="@id/et_port"
                        android:nextFocusUp="@id/et_port"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp"
                        android:text="@={viewModel.uiState.etRoom}" />


                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/isMac"
                    style="@style/tiEitText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/isRoom"
                    app:layout_constraintStart_toStartOf="@id/isRoom"
                    app:layout_constraintTop_toBottomOf="@id/isRoom"
                    app:startIconDrawable="@drawable/baseline_perm_device_information_24"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_mac"
                        style="@style/tiEitTextTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="@string/mac"
                        android:nextFocusUp="@id/et_room"
                        android:nextFocusLeft="@id/et_room"
                        android:nextFocusDown="@id/btSave"
                        android:nextFocusRight="@id/btSave"
                        android:paddingStart="40dp"
                        android:paddingEnd="40dp"
                        android:text="@={viewModel.uiState.etMac}" />


                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/btSave"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:background="@drawable/buttonlayout"
                    android:focusable="true"
                    android:gravity="center"
                    android:nextFocusUp="@id/et_mac"
                    android:orientation="horizontal"
                    android:stateListAnimator="@anim/button_press_anim"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/isMac">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/baseline_history_24"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
