<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/layout025" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6152244" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/itc"
        android:gravity="center|start"
        android:padding="10dp"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="45sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/gl_ver_4"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TODAY'S EVENTS" />

    <TextClock
        android:id="@+id/clock1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/itc"
        android:gravity="center|end"
        android:format12Hour="hh:mm a\nEEE, MMMM dd"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/gl_ver_4"
        app:layout_constraintStart_toStartOf="@id/gl_ver_2"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_6"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12:39 PM\nTuesday, May 28th" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_7"
        app:layout_constraintGuide_percent="0.98"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_group_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#44254ea0"
        android:fontFamily="@font/itc"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ss"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/gl_ver_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <TextView
        android:id="@+id/tv_floor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#44254ea0"
        android:fontFamily="@font/itc"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/locations"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@+id/gl_ver_1"
        app:layout_constraintRight_toLeftOf="@+id/gl_ver_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#44254ea0"
        android:fontFamily="@font/itc"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/times"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@+id/gl_ver_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_feed"
        android:layout_width="0dp"
        tools:listitem="@layout/feed_item_044"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_ver_7"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_6"
        app:layout_constraintStart_toStartOf="@id/gl_ver_5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_floor" />

</androidx.constraintlayout.widget.ConstraintLayout>