<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        app:layout_constraintBottom_toTopOf="@id/gl_ver_5"
        android:background="#636363"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <View
        android:background="#636363"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_ver_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:text="@string/group_event"
        android:textStyle="bold"
        android:fontFamily="@font/itc"
        app:layout_constraintStart_toEndOf="@id/gl_ver_8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_ver_5"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/time"
        android:textStyle="bold"
        android:fontFamily="@font/itc"
        app:layout_constraintEnd_toStartOf="@id/gl_ver_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_ver_5"
        app:layout_constraintStart_toEndOf="@id/gl_ver_1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/location"
        android:textStyle="bold"
        android:fontFamily="@font/itc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_ver_5"
        app:layout_constraintStart_toEndOf="@id/gl_ver_2"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_feedss"
        android:layout_width="0dp"
        android:descendantFocusability="blocksDescendants"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_ver_6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_ver_5"
        tools:listitem="@layout/feed_item_057" />

    <TextClock
        android:format12Hour="hh:mm a MMMM dd, yyyy, EEE"
        tools:text="10:00 AM June 12, 2018, Mon"
        android:fontFamily="@font/itc"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_ver_6"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_1"
        app:layout_constraintGuide_percent="0.35"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_2"
        app:layout_constraintGuide_percent="0.70"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_5"
        app:layout_constraintGuide_percent="0.08"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_6"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_7"
        app:layout_constraintGuide_percent="0.15"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_8"
        app:layout_constraintGuide_percent="0.02"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>